Fixes #699: Remove whitespace from smaller screen sizes
Fix alignment of menu-bar

Fix alignments on 767px screen size

Fix alignments on smaller screen size

Remove extra tag

Aligned menu to the middle on smaller screen size

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -97,6 +97,9 @@
   #navcontainer, #side-menu {
     margin-top: 8px;
   }
+  .top-nav {
+    width: 101.2%;
+  }
 }
 @media screen and (max-width:639px) {
   .align-navsearch-btn {
